--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   </head>
   <body>
     <p id="deviceProperties">Loading device properties...</p>
+    <button>Click Me</button>
   </body>
 </html>
